# shopify-search

./: .gitignore  ANALYTICS_MONITORING_SETUP.md  CLERK_JWT_SETUP.md  CLERK_SETUP.md  COLLECTIONS_SETUP.md  DOMAINS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRE_LAUNCH_CHECKLIST.md  QUICK_ANALYTICS_SETUP.md  RAILWAY_DEPLOYMENT.md  README.md  TROUBLESHOOTING_COLLECTIONS.md  domains.txt  pyproject.toml
frontend/: ENV_SETUP.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/about/: page.tsx
frontend/app/collections/: page.tsx
frontend/app/domain-requests/: page.tsx
frontend/app/domains/: loading.tsx  page.tsx
frontend/app/search/: layout.tsx  loading.tsx  page.tsx
frontend/components/: Card.tsx  DomainCard.tsx  ParallaxBackground.tsx  ProductCard.tsx  SearchBar.tsx  StatsSummary.tsx
frontend/components/collection/: AddToCollectionModal.tsx  BookmarkButton.tsx  CollectionCard.tsx  (+1 more)
frontend/lib/: auth.ts  circuitBreaker.ts  counts.ts  domainRequestService.ts  monitoring.ts  productSearch.ts  searchCache.ts  utils.ts
frontend/public/: site.webmanifest
frontend/supabase/: client.ts  collection.ts  domain.ts  domainRequest.ts  product.ts  server.ts  stats.ts
frontend/theme/: index.ts
frontend/types/: Collection.ts  Domain.ts  DomainRequest.ts  Product.ts
scripts/: embeddings_create.py  fetch_products_json.py  populate_domains.py  scrape_data.py  scrape_domain_metadata.py
sql/: create_collections_tables.sql
(+27 files in other folders)
