[project]
name = "shopify-search"
version = "0.1.0"
description = "Shopify product scraper with SQLite storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "tqdm>=4.66.2",
    "aiosqlite>=0.20.0",
    "tenacity>=8.2.3",
    "supabase>=2.6.0",
    "python-dotenv>=1.0.1",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.35.3",
    "numpy>=2.3.3",
    "sentence-transformers==3.0.1",
    "psycopg2-binary>=2.9.10",
]
